# kagi

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  kagi-server.service  skills.sh.json
.github/workflows/: ci.yml  crates-io.yml  release.yml
.kagi/: access.json  config.json  kagi.json
.kagi/key/: master.key
.kagi/services/: dev.enc  prod.enc  staging.enc  test.enc
crates/kagi-app/: Cargo.toml
crates/kagi-app/src/: lib.rs  main.rs
crates/kagi-app/src/application/: env_migration.rs  export_env.rs  file_artifacts.rs  get_secret.rs  import_env_file.rs  init_service.rs  list_services.rs  mod.rs  remote_service.rs  run_command.rs  search_secrets.rs  set_secret.rs  unset_secret.rs
crates/kagi-app/src/cli/: args.rs  commands.rs  style.rs
crates/kagi-app/src/cli/tui/: audit_log.rs  doctor.rs  env_del.rs  env_list.rs  export.rs  get_browser.rs  import_preview.rs  layout.rs  member_approve.rs  member_del.rs  member_list.rs  mod.rs  project_list.rs  search_browser.rs  sync_browser.rs  theme.rs  token_list.rs
crates/kagi-cli/: Cargo.toml
crates/kagi-cli/src/: lib.rs  main.rs
crates/kagi-cli/src/application/: import_env_file.rs  init_service.rs  search_secrets.rs  sync_service.rs
crates/kagi-cli/src/cli/tui/: doctor.rs  export.rs  get_browser.rs
crates/kagi-crypto/: Cargo.toml
crates/kagi-crypto/src/: lib.rs  xchacha_crypto.rs
crates/kagi-domain/: Cargo.toml
crates/kagi-domain/src/: config.rs  error.rs  lib.rs  runner.rs
crates/kagi-domain/src/crypto/: encryptor.rs
crates/kagi-domain/src/entity/: service.rs
crates/kagi-domain/src/repository/: secret_repo.rs
crates/kagi-server/: Cargo.toml
crates/kagi-server/migrations/: 001_initial.sql  003_add_audit_log.sql  004_add_manifests.sql
crates/kagi-server/src/: lib.rs  sqlite_remote.rs
crates/kagi-server/src/server/: errors.rs  mod.rs  routes.rs  state.rs
crates/kagi-store/: Cargo.toml
crates/kagi-store/src/: env_injector.rs  fs_store.rs  key_manager.rs  lib.rs
crates/kagi-sync/: Cargo.toml
crates/kagi-sync/src/domain/: envelope.rs  project_state.rs  project_token.rs
crates/kagi-sync/src/infrastructure/: mod.rs  remote_client.rs  remote_envelope.rs  remote_local.rs
docs/: diagrams.html  remote-sync-server.md  server-member-approval-fix-plan.md  team-key-model.md
migrations/: 002_add_admin_and_project_requests.sql  005_add_manifest_signature.sql  006_add_join_request_signing_key.sql
skills/kagi/: SKILL.md
src/: main.rs
src/application/: copy_service.rs  export_env.rs  get_secret.rs  import_env_file.rs  init_service.rs  list_services.rs  mod.rs  run_command.rs  search_secrets.rs  set_secret.rs  sync_service.rs  unset_secret.rs
src/cli/: args.rs  commands.rs  mod.rs  style.rs
src/cli/tui/: audit_log.rs  env_del.rs  export.rs  get_browser.rs  member_list.rs
src/domain/: config.rs  env_example_parser.rs  env_parser.rs  error.rs  mod.rs  runner.rs
src/domain/crypto/: encryptor.rs
src/domain/entity/: secret.rs  service.rs
src/domain/repository/: mod.rs  secret_repo.rs
src/domain/sync/: manifest.rs  mod.rs  project_state.rs  project_token.rs  remote_config.rs
src/infrastructure/: aes_gcm_crypto.rs  env_injector.rs  fs_store.rs  key_manager.rs  mod.rs  remote_client.rs  remote_envelope.rs  remote_local.rs  sqlite_remote.rs  xchacha_crypto.rs
src/server/: errors.rs  mod.rs  routes.rs  state.rs
tests/: e2e_cli.rs  integration_tests.rs
tests/.kagi/: access.json  kagi.json
tests/.kagi/secrets/api/: development.enc  production.enc  test.enc
tests/.kagi/services/: dev.enc
tests/.kagi/services/api/: development.enc
tests/api/: README.md  index.ts  package.json
tests/fixtures/monorepo/apps/web/: .env.example
