[package]
name = "kagi"
version = "0.1.0"
edition = "2024"
description = "A small Rust CLI for encrypted environment variables"
license = "MIT"
repository = "https://github.com/BANG88/kagi"
readme = "README.md"
keywords = ["cli", "env", "secrets", "encryption"]
categories = ["command-line-utilities", "config"]

[dependencies]
age = "0.11.3"
anyhow = "1.0.102"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.1", features = ["derive", "color"] }
directories = "6.0.0"
hex = "0.4.3"
keyring = "4.0.1"
keyring-core = "1.0.0"
nanoid = "0.5.0"
owo-colors = "4.3.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
