[package]
name = "kagi-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI application for Kagi secrets manager"

[lib]
name = "kagi_app"
path = "src/lib.rs"

[features]
default = ["server"]
server = ["dep:kagi-server", "kagi-store/server", "kagi-sync/server"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
kagi-domain = { workspace = true }
kagi-crypto = { workspace = true }
kagi-store = { workspace = true }
kagi-sync = { workspace = true }
kagi-server = { workspace = true, optional = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
nanoid = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
keyring = { workspace = true }
keyring-core = { workspace = true }
directories = { workspace = true }
owo-colors = { workspace = true }
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
age = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
kagi-store = { workspace = true, features = ["test-utils"] }
