[package]
name = "kagi-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XChaCha20-Poly1305 encryption implementation for Kagi"

[dependencies]
kagi-domain = { workspace = true }
chacha20poly1305 = { workspace = true }
base64 = { workspace = true }
