[package]
name = "kagi-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain types and traits for Kagi secrets manager"

[features]
test-utils = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
