[package]
name = "kagi-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local storage and key management for Kagi"

[features]
server = []
test-utils = []

[dependencies]
kagi-domain = { workspace = true }
kagi-crypto = { workspace = true }
age = { workspace = true }
base64 = { workspace = true }
directories = { workspace = true }
keyring = { workspace = true }
keyring-core = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
kagi-domain = { workspace = true, features = ["test-utils"] }
