[package]
name = "kagi-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote sync client and protocol types for Kagi"

[features]
server = []

[dependencies]
kagi-domain = { workspace = true }
age = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
nanoid = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
